--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@ant-design/icons": "^4.8.1",
     "@apollo/client": "^3.4.17",
     "@babel/core": "^7.16.0",
-    "@ferlab/ui": "8.0.0-rc4",
+    "@ferlab/ui": "8.0.3",
     "@loadable/component": "^5.15.2",
     "@nivo/pie": "^0.84.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
